# GestureDrawing

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  main.cpp  package-lock.json  progressBar.cpp
backend/: Image.cs  Program.cs  appsettings.json  backend.csproj
backend/Migrations/: 20241101212412_InitialCreate.Designer.cs  20241101212412_InitialCreate.cs  20241113034301_NameChanged.Designer.cs  20241113034301_NameChanged.cs  20241113035727_newMigration.Designer.cs  20241113035727_newMigration.cs  20241121183511_Change table name.Designer.cs  20241121183511_Change table name.cs  ImageDbModelSnapshot.cs
backend/Properties/: launchSettings.json
